<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
     android:padding="16dp"
     android:orientation="vertical"
     android:gravity="center_horizontal">

    <ImageView
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginBottom="16dp"
        android:src="@mipmap/ic_launcher_foreground"/>

    <TextView
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:textSize="20sp"
         android:text="@string/app_title"
         android:textStyle="bold" />

    <TextView
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:layout_marginTop="8dp"
         android:text="@string/app_description"
         />

    <TextView
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:layout_marginTop="16dp"
         android:text="@string/app_version"
         />

</LinearLayout>